<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.2.0.RELEASE</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>
  <groupId>com.jitterted</groupId>
  <artifactId>jittershout</artifactId>
  <version>1.0.0-SNAPSHOT</version>

  <name>JitterShout</name>
  <url>http://www.jitterted.com</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>13</java.version>
    <maven.compiler.source>13</maven.compiler.source>
    <maven.compiler.target>13</maven.compiler.target>

    <twitch4j.version>1.0.0-alpha.17</twitch4j.version>
    <archunit.version>0.11.0</archunit.version>
    <junit.platform.version>1.5.2</junit.platform.version>
  </properties>

  <repositories>
    <!--  Need the jcenter repositories for Twitch4J library  -->
    <repository>
      <id>jcenter</id>
      <url>https://jcenter.bintray.com/</url>
    </repository>
    <repository>
      <id>jcenter-snapshot</id>
      <url>https://oss.jfrog.org/artifactory/libs-release/</url>
    </repository>
  </repositories>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <release>13</release>
          <compilerArgs>--enable-preview</compilerArgs>
          <forceJavacCompilerUse>true</forceJavacCompilerUse>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>

    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>com.github.twitch4j</groupId>
      <artifactId>twitch4j</artifactId>
      <version>${twitch4j.version}</version>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
      <scope>runtime</scope>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-configuration-processor</artifactId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>org.junit.vintage</groupId>
          <artifactId>junit-vintage-engine</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-runner</artifactId>
      <version>${junit.platform.version}</version>
      <scope>test</scope>
    </dependency>

    <!--  ArchUnit for JUnit 5  -->
    <!--    <dependency>-->
    <!--      <groupId>com.tngtech.archunit</groupId>-->
    <!--      <artifactId>archunit-junit5-api</artifactId>-->
    <!--      <version>${archunit.version}</version>-->
    <!--      <scope>test</scope>-->
    <!--    </dependency>-->
    <!--    <dependency>-->
    <!--      <groupId>com.tngtech.archunit</groupId>-->
    <!--      <artifactId>archunit-junit5-engine</artifactId>-->
    <!--      <version>${archunit.version}</version>-->
    <!--      <scope>test</scope>-->
    <!--    </dependency>-->

  </dependencies>

</project>
